Revision history for Perl extension App-BorgRestore

{{$NEXT}}

2.3.0 2018-02-06T15:58:36Z
	- Add --list option to search for paths occuring in backups
	- Warn if sqlite's memory cache is is filled during cache updates
	- Improve documentation of @backup_prefixes setting

2.2.0 2017-11-25T23:16:04Z
	- Add borg 1.1 support
	- Mention required positive return code of config in documentation
	- Enable adhoc mode automatically when cache is empty

2.1.1 2017-10-05T07:58:12Z
	- Fix incorrect/missing dependencies
	- Use autodie everywhere to catch errors early
	- Add basic documentation to internal packages

2.1.0 2017-06-24T15:26:08Z
	- Improve documentation
	- chdir back to original working directory after restore

2.0.1 2017-06-04T17:44:27Z

	- Add github to META.json

2.0.0 2017-06-04T16:18:33Z

    - original version
